# cdn-cache-env

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
api/: main.py
env/: cache.py
server/: app.py
training/: train.py
training/cdn_model/runs/Apr25_08-45-46_LAPTOP-FG1CG0HT/: events.out.tfevents.1777086948.LAPTOP-FG1CG0HT.17596.0
training/cdn_trained_model/runs/Apr24_18-24-02_LAPTOP-FG1CG0HT/: events.out.tfevents.1777035244.LAPTOP-FG1CG0HT.8772.0
training/cdn_trained_model/runs/Apr24_18-26-41_LAPTOP-FG1CG0HT/: events.out.tfevents.1777035402.LAPTOP-FG1CG0HT.4060.0
